--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ django-crispy-forms==1.14.0
 django-heroku==0.3.1
 flake8==3.9.0
 Flask==2.1.2
+Flask-security==1.2.0
 gunicorn==20.1.0
 idna==3.3
 importlib-metadata==4.11.4
